# maf-ebpf-sase

./: .gitignore  README.md
infra/containerlab/: vpp.clab.yml
ips-maf/go-control-plane/: go.mod  main.go
ips-maf/python-agents/: api_spec.py  sase_agent.py
ips-maf/xdp-ebpf/: main.rs
netconf-rag-maf/: netconf_rag_agent_framework.ipynb
netmiko-maf/: netmiko_agent_framework.ipynb  network_diagnostic_agent_v5.ipynb  policy.yaml
ztna-tetragon-maf/go-control-plane/: main.go
ztna-tetragon-maf/python-agents/: admin_agent_maf.py  api_spec.py  sase_agent_maf.py
ztna-tetragon-maf/tetragon/: block-shadow-access.template.yaml
ztna-tetragon-maf/xdp-ebpf/: Cargo.toml  main.rs
